crates/riri-pnpm/tests/snapshots/parse_fixtures__parse_pnpm_fixture@pnpm-v5-deps-field.snap
---
source: crates/riri-pnpm/tests/parse_fixtures.rs
expression: snapshot
---
/lodash/4.17.21: {node: >=0.10.0}
/typescript/5.0.4: {node: >=14.17}
