crates/riri-pnpm/tests/snapshots/parse_fixtures__parse_pnpm_fixture@pnpm-v7-deps-field.snap
---
source: crates/riri-pnpm/tests/parse_fixtures.rs
expression: snapshot
---
/@babel/core/7.20.7: {node: >=6.9.0}
/eslint/8.30.0: {node: ^12.22.0 || ^14.17.0 || >=16.0.0}
