crates/riri-pnpm/tests/snapshots/parse_fixtures__parse_pnpm_fixture@pnpm-v8-deps-field.snap
---
source: crates/riri-pnpm/tests/parse_fixtures.rs
expression: snapshot
---
/@fake-scope/fake-lib-a@7.20.7: {node: >=6.9.0}
/fake-lib-b@8.30.0: {node: ^12.22.0 || ^14.17.0 || >=16.0.0}
