crates/riri-pnpm/tests/snapshots/parse_fixtures__parse_pnpm_fixture@pnpm-v9-catalog.snap
---
source: crates/riri-pnpm/tests/parse_fixtures.rs
expression: snapshot
---
fake-lib-a@4.17.21: {node: >=6.9.0}
